<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/setTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:onClick="onTimeStampPressed"
        android:text="Set Time Stamp" />

    <Button
        android:id="@+id/devicedetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/setTimestamp"
        android:onClick="onDeviceDetailsPressed"
        android:text="Get Device Details" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:id="@+id/relativelayout_device"
     >

        <TextView
        android:id="@+id/txtStationName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="14dp"
        android:layout_marginRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/Station_name"
        android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/txtdisplayStationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtStationName"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/txtSUIData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtStationName"
            android:layout_gravity="start"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="22dp"
            android:layout_marginRight="10dp"
            android:paddingTop="20dp"
            android:text="@string/SUI_data"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/txtdisplaySUIData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtSUIData"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/txtStationTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtdisplaySUIData"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/Station_Time"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/txtdisplayStationTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtStationTime"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/txtHWversion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtdisplayStationTime"
            android:layout_gravity="start"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/HW_version"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/txtdisplayHWVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtHWversion"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp" />
        <TextView
            android:id="@+id/txtFWversion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtdisplayHWVersion"
            android:layout_gravity="start"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/FW_version"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/txtdisplayFWVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtFWversion"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/txtBatteryVoltage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtdisplayFWVersion"
            android:layout_gravity="start"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/Battery_voltage"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/txtdisplayBattery_voltage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtBatteryVoltage"
            android:inputType="numberDecimal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/txtGPSCoOrdinate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtdisplayBattery_voltage"
            android:layout_gravity="start"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/GPS_coordinate"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/txtdisplayGPS_Coor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtGPSCoOrdinate"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/txtTimeZone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtdisplayGPS_Coor"
            android:layout_gravity="start"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/TimeZone"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/txtdisplayTimeZone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTimeZone"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp" />


    </RelativeLayout>


    <!--<EditText-->
    <!--android:id="@+id/displaydevicedetails"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_below="@+id/devicedetails"-->
    <!--android:layout_marginTop="10dp"-->
    <!--android:layout_marginRight="10dp"-->
    <!--android:layout_marginLeft="10dp"-->
    <!--android:inputType="textMultiLine" />-->


    <!--<TextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:id="@+id/txtdisplaytimestamp"-->
    <!--android:layout_below="@+id/devicedetails"-->
    <!--android:layout_marginRight="10dp"-->
    <!--android:layout_marginLeft="10dp"-->
    <!--android:layout_marginTop="10dp"/>-->
</RelativeLayout>
